"Added PUT and DELETE routes"
